# opret-digital-ansoegning-til-personlige-hjaelpemidler

./: Regler.xlsx  main.py  pyproject.toml  xflow_processor.py
process/: config.py  nexus_service.py  xflow_processor.py  xflow_service.py
