[project]
name = "process-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "kmd-nexus-client",
    "odk-tools",
    "openpyxl",
    "xflow-client",
]

[tool.uv.sources]
xflow-client = { git = "https://github.com/odense-rpa/xflow-client.git", rev = "master" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git", rev = "master" }
kmd-nexus-client = { git = "https://github.com/odense-rpa/nexus-client.git", rev = "main" }
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.1" }
